--- a/learn-note/pyqt/字体锯齿.md
+++ b/learn-note/pyqt/字体锯齿.md
@@ -1,6 +1,6 @@
 ## 现象描述
 出现如下图：
-![[1.png]]
+![[img1.png]]
 所示的字体边缘出现锯齿的现象。
 ## 解决方法
 在程序开头加上一行如下代码：
@@ -8,4 +8,4 @@
 os.environ["QT_FONT_DPI"] = "100"
 ```
 调整后的文字：
-![[2.png]]
+![[img2.png]]
