--- a/learn-note/html/3.文本元素.md
+++ b/learn-note/html/3.文本元素.md
@@ -10,6 +10,12 @@
 >搜索引擎使用标题为您的网页的结构和内容编制索引。
 >用户可以通过标题来快速浏览您的网页。
 >应该将 h1 用作主标题（最重要的），其后是 h2（次重要的），再其次是 h3，以此类推。
+## HTML 段落
+段落是通过 \<p>标签定义的。
+```html
+<p>这是一个段落 </p>
+<p>这是另一个段落</p>
+```
 ## HTML 水平线
 \<hr> 标签在 HTML 页面中创建水平线。
 hr元素可用于分隔内容。
@@ -21,24 +27,24 @@ hr元素可用于分隔内容。
 <hr> 
 <p>这是一个段落。</p>
 ```
-## HTML 注释
-可以将注释插入 HTML 代码中，这样可以提高其可读性，使代码更易被人理解。浏览器会忽略注释，也不会显示它们。
-注释写法如下:
-```html
-<!-- 这是一个注释 -->
-```
-## HTML 段落
-段落是通过 \<p>标签定义的。
-```html
-<p>这是一个段落 </p>
-<p>这是另一个段落</p>
-```
 ## HTML 折行
 
 如果希望在不产生一个新段落的情况下进行换行（新行），用\<br>标签：
 ```html
 <p>这个<br>段落<br>演示了分行的效果</p>
 ```
-><br /> 元素是一个空的 HTML 元素。由于关闭标签没有任何意义，因此它没有结束标签。
+>\</br> 元素是一个空的 HTML 元素。由于关闭标签没有任何意义，因此它没有结束标签。
+
 ## 文本格式化
+| 标签        | 描述     |
+| --------- | ------ |
+| \<b>      | 定义粗体文本 |
+| \<em>     | 定义着重文字 |
+| \<i>      | 定义斜体字  |
+| \<small>  | 定义小号字  |
+| \<strong> | 定义加重语气 |
+| \<sub>    | 定义下标字  |
+| \<sup>    | 定义上标字  |
+| \<ins>    | 定义插入字  |
+| \<del>    | 定义删除字  |
 [详细](https://www.runoob.com/html/html-formatting.html)
