--- a/learn-note/绘画/脸部.md
+++ b/learn-note/绘画/脸部.md
@@ -1,19 +1,14 @@
 ## 三庭五眼
 ### 三庭
-![[img10.png]]
+![[Pasted image 20250209184723.png]]
 发际线到眉，鼻梁，剩下部分为1：1：1，但为了美化额头可以更大一些。
 男性的3部分更长一点，q版角色更短一些
 ### 五眼
 如图
-![[img11.png]]
+![[Pasted image 20250209184801.png]]
 ## 正面
-1.先如图绘制圆和三角
-![[img7.png]]
-2.再补上肉
-![[img8.png]]
-3.确定五官位置
-![[img9.png]]
+![[Pasted image 20250209181042.png]]
 ## 半侧
-![[img12.png]]
+![[Pasted image 20250209184341.png]]
 ## 全测
 ![[img13.png]]
